infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: faux-dev-host
      http:
        paths:
          - path: /api/now
            backend:
              serviceName: timestamp-srv
              servicePort: 5000
